--- a/me/Layout/NavMenu.razor
+++ b/me/Layout/NavMenu.razor
@@ -4,7 +4,7 @@
     <nav class="sitenav" aria-labelledby="main-menu" onclick="document.getElementById('navmenu-toggle').click();">
         <FluentNavMenu Id="main-menu" Width="250" Collapsible="true" Title="Navigation menu" @bind-Expanded="expanded">
              <FluentNavLink Href="/" Match="NavLinkMatch.All" Icon="@(new Icons.Regular.Size20.Home())" IconColor="Color.Accent">About Me</FluentNavLink>
-             <FluentNavLink Href="/profile" Match="NavLinkMatch.All" IconColor="Color.Accent">Profile</FluentNavLink>
+             @* <FluentNavLink Href="/profile" Match="NavLinkMatch.All" IconColor="Color.Accent">Profile</FluentNavLink> *@
         </FluentNavMenu>
     </nav>
 </div>
