Replace h1 with FluentLabel for Competency Matrix title

--- a/me/Pages/CompetencyMatrix.razor
+++ b/me/Pages/CompetencyMatrix.razor
@@ -8,7 +8,7 @@
 
 <PageTitle>gjmwolmarans.me | Competency Matrix</PageTitle>
 
-<h1>Competency Matrix</h1>
+<FluentLabel Typo="Typography.HeroTitle">Competency Matrix</FluentLabel>
 
 <ExcelGraph/>
 
