Update package versions and clean up using directives
- Updated `Microsoft.Extensions.Hosting` to version `8.0.1`.
- Removed unused `@using` directives in `ResourceTypeList.razor` and `RoleList.razor`.
- Cleaned up `@using` directives in `CompetencyMatrix.razor`.
- Added necessary `@using` directives in `_Imports.razor`.
- Updated `Microsoft.AspNetCore.WebUtilities` to version `8.0.14`.
- Updated `Microsoft.FluentUI.AspNetCore.Components` packages to version `4.11.6`.

--- a/me/Components/Resource/ResourceTypeList.razor
+++ b/me/Components/Resource/ResourceTypeList.razor
@@ -1,7 +1,4 @@
-﻿@using me.shared
-@using Syncfusion.Blazor.Buttons
-
-@inject IExcelFileService Data
+﻿@inject IExcelFileService Data
 
 @if (Items.Any())
 {
