Update FluentMessageBar intent to Success in ChipHelp component

--- a/me/Components/Help/ChipHelp.razor
+++ b/me/Components/Help/ChipHelp.razor
@@ -1,6 +1,6 @@
 ﻿@using Syncfusion.Blazor.Buttons
 
-<FluentMessageBar Title="Most chips are toggleable" Intent="@MessageIntent.Info">
+<FluentMessageBar Title="Most chips are toggleable" Intent="@MessageIntent.Success">
     <SfChip Selection="SelectionType.Multiple">
         <ChipEvents OnClick="@((e) => _isHelpChipSelected = e.Selected)"></ChipEvents>
         <ChipItems>
