--- a/me/Components/Resource/ResourceList.razor
+++ b/me/Components/Resource/ResourceList.razor
@@ -9,7 +9,7 @@
 
 @if (Items.Any())
 {
-    <h3>Resources</h3>
+    <h3 id="resources">Resources</h3>
     <SfListView DataSource="@Items.OrderByDescending(x => x.Id)" CssClass="e-list-template" Width="95vw"
         SortOrder="Syncfusion.Blazor.Lists.SortOrder.Ascending" EnableVirtualization="true">
         <ListViewFieldSettings TValue="Resource" Id="@nameof(Resource.Id)" Text="@nameof(Resource.Title)">
