--- a/me/Components/XP/XPCounter.razor
+++ b/me/Components/XP/XPCounter.razor
@@ -1,12 +1,12 @@
 ﻿@using Syncfusion.Blazor.Cards
 
-<div style="width: 100%;">
+<div id="xp-counter" style="width: 100%;">
     <SfCard>
         <CardContent>
+            <span>Weighted Experience</span>
             <div class="card-value">
                 @TotalXP.ToString("N2")
             </div>
-            <span>Weighted Experience</span>
         </CardContent>
     </SfCard>
 </div>
