--- a/me/Components/Role/RoleList.razor
+++ b/me/Components/Role/RoleList.razor
@@ -1,17 +1,19 @@
 @if (Items.Any())
 {
-    <h3>
-        Roles @if (Items.Any(r => r.IsSelected)) {<FluentIcon OnClick="ClearSelection" Value="@(new Icons.Regular.Size24.FilterDismiss())" /> }
-    </h3>
-    <SfChip @ref="_chip" Selection="SelectionType.Multiple">
-        <ChipEvents OnClick="@OnClick"></ChipEvents>
-        <ChipItems>
-            @foreach (var role in Items.OrderByDescending(r => r.WeightedExperience))
-            {
-                <ChipItem Text="@role.Title" CssClass="@(role.IsHighlighted ? "e-primary" : "")"></ChipItem>
-            }
-        </ChipItems>
-    </SfChip>
+    <h3 id="roles">
+        Roles @if (Items.Any(r => r.IsSelected)) {
+        <FluentIcon OnClick="ClearSelection" Value="@(new Icons.Regular.Size24.FilterDismiss())" />
+    }
+</h3>
+<SfChip @ref="_chip" Selection="SelectionType.Multiple">
+    <ChipEvents OnClick="@OnClick"></ChipEvents>
+    <ChipItems>
+        @foreach (var role in Items.OrderByDescending(r => r.WeightedExperience))
+        {
+            <ChipItem Text="@role.Title" CssClass="@(role.IsHighlighted ? "e-primary" : "")"></ChipItem>
+        }
+    </ChipItems>
+</SfChip>
 }
 
 @code {
