--- a/me/Layout/NavMenu.razor
+++ b/me/Layout/NavMenu.razor
@@ -1,9 +1,30 @@
 <div class="navmenu">
     <input type="checkbox" title="Menu expand/collapse toggle" id="navmenu-toggle" class="navmenu-icon" />
-    <label for="navmenu-toggle" class="navmenu-icon"><FluentIcon Value="@(new Icons.Regular.Size20.Navigation())" Color="Color.Fill" /></label>
+    <label for="navmenu-toggle" class="navmenu-icon">
+        <FluentIcon Value="@(new Icons.Regular.Size20.Navigation())" Color="Color.Fill" />
+    </label>
     <nav class="sitenav" aria-labelledby="main-menu" onclick="document.getElementById('navmenu-toggle').click();">
         <FluentNavMenu Id="main-menu" Width="250" Collapsible="true" Title="Navigation menu" @bind-Expanded="expanded">
-             <FluentNavLink Href="/" Match="NavLinkMatch.All" Icon="@(new Icons.Regular.Size20.Home())" IconColor="Color.Accent">Home</FluentNavLink>
+            <FluentNavLink Href="/" Match="NavLinkMatch.All" Icon="@(new Icons.Regular.Size20.Home())"
+                IconColor="Color.Accent">Home</FluentNavLink>
+            <FluentNavLink Href="/#about" Icon="@(new Icons.Regular.Size20.Person())"
+                IconColor="Color.Accent">About</FluentNavLink>
+            <FluentNavLink Href="/#work-experience" Icon="@(new Icons.Regular.Size20.Briefcase())"
+                IconColor="Color.Accent">Work Experience</FluentNavLink>
+            <FluentNavLink Href="/#projects" Icon="@(new Icons.Regular.Size20.Folder())" 
+                IconColor="Color.Accent">Projects</FluentNavLink>
+            <FluentNavLink Href="/#competency-matrix" Icon="@(new Icons.Regular.Size20.ChartMultiple())"
+                IconColor="Color.Accent">Competency Matrix</FluentNavLink>
+            <FluentNavLink Href="/#xp-counter" Icon="@(new Icons.Regular.Size20.Trophy())"
+                IconColor="Color.Accent">XP Counter</FluentNavLink>
+            <FluentNavLink Href="/#chip-help" Icon="@(new Icons.Regular.Size20.QuestionCircle())"
+                IconColor="Color.Accent">Chip Help</FluentNavLink>
+            <FluentNavLink Href="/#roles" Icon="@(new Icons.Regular.Size20.People())"
+                IconColor="Color.Accent">Roles</FluentNavLink>
+            <FluentNavLink Href="/#tags" Icon="@(new Icons.Regular.Size20.Tag())"
+                IconColor="Color.Accent">Tags</FluentNavLink>
+            <FluentNavLink Href="/#resources" Icon="@(new Icons.Regular.Size20.BookOpen())"
+                IconColor="Color.Accent">Resources</FluentNavLink>
         </FluentNavMenu>
     </nav>
 </div>
@@ -11,3 +32,10 @@
 @code {
     private bool expanded = true;
 }
+
+
+    
+   
+
+
+   
