Update CompetencyMatrix.razor to address OneDrive link issues and improve file download accessibility

--- a/me/Pages/CompetencyMatrix.razor
+++ b/me/Pages/CompetencyMatrix.razor
@@ -17,7 +17,8 @@
     <FluentGridItem sm="12" md="6" lg="3">
         <FluentStack Orientation="Orientation.Vertical" id="chip-help">
             <ChipHelp />
-            <FluentSpacer />
+            @* TODO: OneDrive links aren't working at the moment. find a permanent solution to make the latest file available for download *@
+            @* <FluentSpacer />
             <a href="https://bit.ly/gjmwolmarans-CM-xlsx" download target="_blank"
                 style="width: 100%; text-decoration: none;">
                 <SfCard>
@@ -31,7 +32,7 @@
                         </FluentStack>
                     </CardContent>
                 </SfCard>
-            </a>
+            </a> *@
         </FluentStack>
     </FluentGridItem>
     <FluentGridItem sm="12" md="12" lg="6">
