--- a/me/Pages/CompetencyMatrix.razor
+++ b/me/Pages/CompetencyMatrix.razor
@@ -5,7 +5,7 @@
 
 <FluentLabel id="competency-matrix" Typo="Typography.HeroTitle">Competency Matrix</FluentLabel>
 
-<ExcelGraph />
+<ExcelGraph @bind-Data="Data" />
 
 <FluentGrid>
     <FluentGridItem sm="12" md="12" lg="12">
